use position:fixed stacking context for .google-maps-wrap and other elements in front of photoswipe BUG: doesn't work on ios landscape. rendering problem clean up css4 var calculations

--- a/src/app/google-maps/google-maps.component.scss
+++ b/src/app/google-maps/google-maps.component.scss
@@ -1,42 +1,9 @@
 app-google-maps {
 	display: block;
+	// width/height set by ion-header.google-maps-wrap
 	width: 100%;
-	height: 40%;
+	height: 100%;
 }
-
-// required here for mobile safari
-.plt-ios ion-app.fullscreen-gallery app-google-maps {
-	height:0;
-}
-
-@media only screen 
-	and (max-width: 414px) 
-	and (max-height: 812px) 
-	and (orientation: portrait)
-	and (-webkit-min-device-pixel-ratio: 2)
-{
-
-	app-google-maps {
-		height: var(--google-map-height);
-		width: 100%;
-	}
-
-}
-
-@media only screen 
-	and (max-width: 812px) 
-	and (max-height: 414px) 
-	and (orientation: landscape)
-	and (-webkit-min-device-pixel-ratio: 2)
-{
-
-	app-google-maps {
-		// aspect ratio=3:2 for ip6/7/8
-		height: 100%;
-		width: 50%;  
-	}
-
-} 
 
 
 .spinner-wrap-centered {
